<resources>
    <string name="app_name">Hajma Books</string>
    <string name="_home">Home</string>
    <string name="_cart">Сart</string>
    <string name="_category">Category</string>
    <string name="_search">Search</string>
    <string name="_profile">Profile</string>
    <string name="see_all">See All</string>
    <string name="new_books">New books</string>
    <string name="for_you">For you</string>
    <string name="collections">Collections</string>
    <string name="free">FREE</string>
    <string name="audio_books">Audio books</string>
    <string name="best_seller">Best seller</string>
    <string name="free_books">Free books</string>
    <string name="category">Category</string>
    <string name="publisher_description">Publisher Description</string>
    <string name="genre">GENRE</string>
    <string name="released">RELEASED</string>
    <string name="length">LENGTH</string>
    <string name="seller">SELLER</string>
    <string name="language">LANGUAGE</string>
    <string name="buy_all">Buy All</string>
    <string name="search_hint">Search..</string>
    <string name="_login">Login</string>
    <string name="_email_username">Email / Username</string>
    <string name="password">Password</string>
    <string name="re_password">Re-password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="_havent_account">Have\'nt Account?</string>
    <string name="_email">Email</string>
    <string name="_username">Username</string>
    <string name="_name">Name</string>
    <string name="_phone">Phone</string>
    <string name="_already_account">Already have an account?</string>
    <string name="_books">Books</string>
    <string name="_following">Following</string>
    <string name="_followers">Followers</string>
    <string name="_presents">Presents</string>
    <string name="_follow">Follow</string>
    <string name="_message">Message</string>
    <string name="_categories">Categories</string>
    <string name="_authors">Authors</string>
    <string name="_people">People</string>
    <string name="_please_verification_input">Please input verification code</string>
    <string name="_required_field">This field is required</string>
    <string name="_pass_equal">Passwords must be equal</string>
    <string name="_cannot_contain_spaces">Password cannot contain spaces</string>
    <string name="_title_error">Error</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="_back">Back</string>
    <string name="_next">Next</string>
    <string name="_attention">Attention</string>
    <string name="_cancel">Cancel</string>
    <string name="_done">Done</string>
    <string name="_if_you_back">If you go back, you\'ll have to confirm the number again</string>
    <string name="_resend_sms">Resend SMS</string>
    <string name="_new_code_sent">New code sent</string>
    <string name="_complete_registration">Complete Registration</string>
    <string name="_you_are_not_registered">You are not registered</string>
    <string name="_more_books_than">More books than</string>
    <string name="_add_to_card">| Add to cart</string>
    <string name="_buy_btn">Buy \u0020 | \u0020</string>
    <string name="_author_dt">Author: \u0020</string>
    <string name="_credit_card">Credit card</string>
    <string name="_requested">Requested</string>
    <string name="_accept">Accept</string>
    <string name="_reject">Reject</string>
    <string name="_settings">Settings</string>
    <string name="_change_profile_picture">Change profile picture</string>
    <string name="_language">Language</string>
    <string name="_change_password">Change Password</string>
    <string name="_logout">Logout</string>
    <string name="_save">Save</string>
    <string name="_added_to_cart">Added to cart</string>
    <string name="_raport">Raport</string>
    <string name="_added_to_my_books">Added to my books</string>
    <string name="_present_sended">Present sended</string>
    <string name="_messages">Messages</string>
    <string name="_read">Read</string>
    <string name="_download">Download</string>
    <string name="_free_audio_books">Free Audio Books</string>
    <string name="_forget_password">Forgot password</string>
    <string name="_or">Or</string>
    <string name="_reset_password">Reset password</string>
    <string name="_old_password">Old password</string>
    <string name="_new_password">New password</string>
    <string name="_follow_requests">Follow Requests</string>
    <string name="_listen">Listen</string>

</resources>
