<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_bottom_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/_home"
        >
    </item>

    <item
        android:id="@+id/nav_bottom_cart"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/_cart">
    </item>

    <item
        android:id="@+id/nav_bottom_category"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/_category">
    </item>

    <item
        android:id="@+id/nav_bottom_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/_search">
    </item>

    <item
        android:id="@+id/nav_bottom_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/_profile">
    </item>
</menu>