<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/_profile"
        android:textColor="#000000"
        android:textSize="25sp" />

    <ImageButton
        android:id="@+id/imageButtonProfileSettings"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@null"
        app:srcCompat="@drawable/ic_settings" />

    <ImageButton
        android:id="@+id/imageButtonProfileMessage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="8dp"
        android:layout_toLeftOf="@id/imageButtonProfileSettings"
        android:background="@null"
        app:srcCompat="@drawable/ic_speech_bubble" />

    <ImageButton
        android:id="@+id/imageButtonAddFriend"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="8dp"
        android:layout_toLeftOf="@id/imageButtonProfileMessage"
        android:background="@null"
        app:srcCompat="@drawable/ic_add_friend" />

    <ImageView
        android:id="@+id/imgProfileCover"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/textView5"
        android:layout_marginTop="15dp"
        android:background="@drawable/img_profile_background"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_account_box_black_24dp" />

    <TextView
        android:id="@+id/txtProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp"
        android:layout_marginRight="100dp"
        android:text="Ricardo Josef"
        android:textColor="#042C5C"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtProfileBiography"
        android:layout_width="230dp"
        android:layout_height="64dp"
        android:layout_below="@id/txtProfileName"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:textColor="#042C5C"
        android:textSize="11sp" />

    <LinearLayout
        android:id="@+id/lnr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgProfileCover"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtProfileBooksCount"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="456"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtProfileFollowingCount"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="221"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/txtProfileFollowersCount"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="45.6K"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/txtProfilePresentsCount"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="222"
                android:textAlignment="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_books"
                android:textAlignment="center"
                android:textColor="#787878"
                android:textSize="13sp" />

            <TextView
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_following"
                android:textAlignment="center"
                android:textColor="#787878" />

            <TextView
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_followers"
                android:textAlignment="center"
                android:textColor="#787878" />

            <TextView
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_presents"
                android:textAlignment="center"
                android:textColor="#787878" />
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_profile_books"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lnr"
        android:layout_marginTop="15dp" />
</RelativeLayout>